feat: focus keyboard handler & style modify
포커스 메뉴 등 스타일 값 수정함

--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -37,7 +37,7 @@ header > ul{
 }
 
 /* 이미지 */
-.profileBox > .profileImg{
+.profileImgBox{
     width: 3.3rem;
     height: 3.3rem;
     border-radius: 50%;
