--- a/frontend/src/pages/Auth/Login/Login.module.css
+++ b/frontend/src/pages/Auth/Login/Login.module.css
@@ -206,3 +206,8 @@
     padding: 1rem 0rem;
     gap: 0.4rem;
 }
+
+.accountBox{
+    padding: 0rem 0.5rem;
+    border-radius: var(--border-radius);
+}
